nexus/nexus-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: devops
  labels:
    app: nexus-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-nginx
  template:
    metadata:
      labels:
        app: nexus-nginx
    spec:
      containers:
      - name: nexus-nginx
        image: nginx:1.23.1-alpine
        imagePullPolicy: Never
        ports:
          - containerPort: 9999
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 128Mi
        volumeMounts:
          - name: nginx-configuration
            mountPath: /etc/nginx/nginx.conf
            subPath: NGINX_CONF_KEY
          - name: application-configuration
            mountPath: /etc/nginx/nginx.d/app.conf
            subPath: APP_CONF_KEY
      volumes:
        - name: nginx-configuration
          secret:
            secretName: nexus-nginx-secret
        - name: application-configuration
          secret:
            secretName: nexus-nginx-secret
