nexus/nexus-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-nginx-service
  namespace: devops
spec:
  selector:
    app: nexus-nginx
  ports:
    - name: nexus-nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: nexus-nginx-https
      protocol: TCP
      port: 443
      targetPort: 443
