nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops
spec:
  selector:
    app: nexus
  ports:
    - name: nexus-ui
      protocol: TCP
      port: 6666
      targetPort: 8081
    - name: nexus-docker
      protocol: TCP
      port: 7777
      targetPort: 8082
